<resources>
    <string name="app_name">Carros Elétricos</string>
    <string name="btnMarca">Marca</string>
    <string name="btnPesquisa">Pesquisa avançada</string>
    <string name="btnMoreInfo">Mais Info</string>
    <string name="lblSelectValues">O que procura?</string>
    <string name="lblPrice">Preço (€)</string>
    <string name="lblAcceleration">Accel 0-100km/h (s)</string>
    <string name="lblPower">Potência (cv)</string>
    <string name="lblRange">Autonomia (km)</string>
    <string name="lblRating">Classificação (\u2605)</string>
    <string name="btnFindCar">Ver carros</string>
    <string name="range">Gama: </string>
</resources>